--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,13 +7,60 @@
         android:layout_height="match_parent"
         tools:context=".WelcomeActivity">
 
+    <ImageView
+            android:src="@drawable/welcomescreenbg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
+            app:srcCompat="@drawable/welcomescreenbg" android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <ImageView
+            android:src="@drawable/swooshlogo"
+            android:layout_width="88dp"
+            android:layout_height="29dp"
+            android:id="@+id/imageView2" android:scaleType="fitCenter"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.5"/>
     <TextView
+            android:text="GO ALL IN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/textView2"
+            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
+            android:textSize="46sp" android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
+    />
+    <TextView
+            android:text="ON GOING ALL OUT"
+            android:layout_width="230dp"
+            android:layout_height="32dp"
+            android:id="@+id/textView3"
+            android:textColor="@android:color/background_light" android:textSize="22sp"
+            android:fontFamily="@font/montserrat"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textAlignment="center"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"/>
+    <TextView
+            android:text="Find a team in your city, and dominate the league."
+            android:layout_width="281dp"
+            android:layout_height="36dp"
+            android:id="@+id/textView4" android:textColor="@color/colorAccent"
+            android:textAlignment="center" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
+            android:fontFamily="@font/montserrat"/>
+    <Button
+            android:text="GET STARTED"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorAccent"
+            android:background="@drawable/swoosh_button"/>
 
 </android.support.constraint.ConstraintLayout>
