--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -28,13 +28,13 @@
     <TextView
             android:text="GO ALL IN"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="54dp"
             android:id="@+id/textView2"
             android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
             android:textSize="46sp" android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
-    />
+            android:textStyle="bold"/>
     <TextView
             android:text="ON GOING ALL OUT"
             android:layout_width="230dp"
@@ -44,7 +44,7 @@
             android:fontFamily="@font/montserrat"
             app:layout_constraintTop_toBottomOf="@+id/textView2" android:textAlignment="center"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"/>
+            app:layout_constraintEnd_toStartOf="@+id/imageView" android:textStyle="bold"/>
     <TextView
             android:text="Find a team in your city, and dominate the league."
             android:layout_width="281dp"
