--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -14,7 +14,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
 
     <ImageView
             android:src="@drawable/swooshlogo"
@@ -24,9 +24,9 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintHorizontal_bias="0.5" android:contentDescription="@string/app_logo"/>
     <TextView
-            android:text="Desired League:"
+            android:text="@string/desired_league"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView" android:textColor="@color/colorAccent"
@@ -36,33 +36,35 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="365dp"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="304dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView">
         <ToggleButton
-                android:text="MENS"
+                android:text="@string/mens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="196dp"
                 tools:layout_editor_absoluteX="161dp" android:id="@+id/toggleButton" tools:text="MENS"
-                android:textOff="MENS" android:textOn="MENS" android:background="@drawable/swoosh_toggle"
+                android:textOff="@string/mens" android:textOn="@string/mens"
+                android:background="@drawable/swoosh_toggle"
                 android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"/>
         <ToggleButton
-                android:text="WOMENS"
+                android:text="@string/womens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp" android:textOff="WOMENS" android:textOn="WOMENS"
+                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                 android:textColor="@color/colorAccent" android:background="@drawable/swoosh_toggle"
                 android:fontFamily="@font/montserrat"/>
         <ToggleButton
-                android:text="CO-ED"
+                android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="CO-ED"
-                android:textOn="CO-ED" android:textColor="@color/colorAccent"
+                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/co_ed"
+                android:textOn="@string/co_ed" android:textColor="@color/colorAccent"
                 android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"/>
     </LinearLayout>
     <Button
-            android:text="Next"
+            android:text="@string/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/button2"
