--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,7 +15,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
             app:srcCompat="@drawable/welcomescreenbg" android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/background_image"/>
     <ImageView
             android:src="@drawable/swooshlogo"
             android:layout_width="88dp"
@@ -24,9 +24,9 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintHorizontal_bias="0.5" android:contentDescription="@string/app_logo"/>
     <TextView
-            android:text="GO ALL IN"
+            android:text="@string/go_all_in"
             android:layout_width="wrap_content"
             android:layout_height="54dp"
             android:id="@+id/textView2"
@@ -36,7 +36,7 @@
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
             android:textStyle="bold"/>
     <TextView
-            android:text="ON GOING ALL OUT"
+            android:text="@string/on_going_all_out"
             android:layout_width="230dp"
             android:layout_height="32dp"
             android:id="@+id/textView3"
@@ -46,7 +46,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintEnd_toStartOf="@+id/imageView" android:textStyle="bold"/>
     <TextView
-            android:text="Find a team in your city, and dominate the league."
+            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
             android:layout_width="281dp"
             android:layout_height="36dp"
             android:id="@+id/textView4" android:textColor="@color/colorAccent"
@@ -55,10 +55,10 @@
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
             android:fontFamily="@font/montserrat"/>
     <Button
-            android:text="GET STARTED"
+            android:text="@string/get_started"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/getStartedButton" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorAccent"
             android:background="@drawable/swoosh_button"/>
