--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -67,10 +67,12 @@
             android:text="@string/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/leagueNextButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorAccent"
-            android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_button"/>
+            android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_button"
+            android:layout_marginStart="16dp" android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
+            android:onClick="leagueNextClicked"/>
 
 </android.support.constraint.ConstraintLayout>
