--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -45,23 +45,26 @@
                 android:text="@string/mens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="196dp"
-                tools:layout_editor_absoluteX="161dp" android:id="@+id/toggleButton" tools:text="MENS"
+                tools:layout_editor_absoluteX="161dp" android:id="@+id/mensLeagueButton" tools:text="MENS"
                 android:textOff="@string/mens" android:textOn="@string/mens"
                 android:background="@drawable/swoosh_toggle"
-                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"/>
+                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
+                android:onClick="onMensClicked"/>
         <ToggleButton
                 android:text="@string/womens"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginTop="16dp"
+                android:layout_height="wrap_content" android:id="@+id/womensLeagueButton"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                 android:textColor="@color/colorAccent" android:background="@drawable/swoosh_toggle"
-                android:fontFamily="@font/montserrat"/>
+                android:fontFamily="@font/montserrat" android:onClick="onWomensClicked"/>
         <ToggleButton
                 android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/co_ed"
+                android:layout_height="wrap_content" android:id="@+id/coedLeagueButton" android:textOff="@string/co_ed"
                 android:textOn="@string/co_ed" android:textColor="@color/colorAccent"
-                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"/>
+                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
+                android:onClick="onCoedClicked"/>
     </LinearLayout>
     <Button
             android:text="@string/next"
