--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SkillActivity">
+        tools:context=".Controller.SkillActivity">
 
     <ImageView
             android:layout_width="0dp"
@@ -42,25 +42,28 @@
         <ToggleButton
                 android:text="@string/beginner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/beginnerSkillButton" android:layout_weight="1"
                 android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
-                android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginEnd="16dp"/>
+                android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginEnd="16dp"
+                android:onClick="onBeginnerClicked"/>
         <ToggleButton
                 android:text="@string/baller"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/ballerSkillButton" android:layout_weight="1"
                 android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
-                android:textOff="@string/baller" android:textOn="@string/baller" android:layout_marginStart="16dp"/>
+                android:textOff="@string/baller" android:textOn="@string/baller" android:layout_marginStart="16dp"
+                android:onClick="onBallerClicked"/>
     </LinearLayout>
     <Button
             android:text="@string/finish"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
+            android:id="@+id/skillFinishButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textColor="@color/colorAccent"
-            android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_button"/>
+            android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_button"
+            android:onClick="onSkillFinishClicked"/>
 
 </android.support.constraint.ConstraintLayout>
